language/move-lang/tests/move_check/expansion/use_struct_invalid_name.move
address 0x1 {
module X {
    struct S {}
}

module M {
    use 0x1::X::u;
    struct X { f: u }
}
}
